--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <a href="./index.html" class="logo">Web<span class="studio-header">Studio</span></a>
       <!-- Навігація на інші сторінки -->
       <ul class="site-nav">
-        <li><a href="./index.html">Студія</a></li>
+        <li><a href="./index.html" class="link current">Студія</a></li>
         <li><a href="./portfolio.html">Портфоліо</a></li>
         <li><a href="/">Контакти</a></li>
       </ul>
@@ -35,7 +35,7 @@
 
   <main>
     <section class="hero">
-      <h1>Ефективні рішення для вашого бізнесу</h1>
+      <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
       <button type="button">Замовити послугу</button>
     </section>
 
@@ -86,6 +86,7 @@
         </li>
       </ul>
     </section>
+
 
 
     <section class="team">
