--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,7 @@
             <!-- Навігація на інші сторінки -->
             <ul class="site-nav">
                 <li><a href="./index.html">Студія</a></li>
-                <li><a href="./portfolio.html">Портфоліо</a></li>
+                <li><a href="./portfolio.html" class="link current">Портфоліо</a></li>
                 <li><a href="/">Контакти</a></li>
             </ul>
         </nav>
